# blocked_domains

./: .coveragerc  .gitignore  .travis.yml  README.rst  pyproject.toml
blocked_domain_generator/: __main__.py  const.py  utils.py
blocked_domain_generator/crawlers/: ads.py  base.py  cate.py  file.py  index.py  sites.py
blocked_domain_generator/parsers/: ads.py  base.py  cate.py  sites.py
tests/: pytest.ini  test_blocked_domain_generator.py  test_utils.py
tests/crawlers/: conftest.py  test_ads.py  test_base.py  test_cate.py  test_file.py  test_index.py  test_sites.py
tests/data/: hosts  longlist
tests/parsers/: test_ads.py  test_base.py  test_cate.py
