[tool.poetry]
name = "blocked_domain_generator"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.1"
trio = "^0.13.0"
loguru = "^0.4.0"
httpx = { git = "https://github.com/encode/httpx.git", branch = "master" }
tqdm = "^4.40.0"

[tool.poetry.scripts]
block_generator = "blocked_domain_generator.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"
pytest-trio = "^0.5.2"
pytest-ordering = "^0.6"
pytest-cov = "^2.8.1"
respx = { git = "https://github.com/lundberg/respx.git", branch = "dev"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
